<resources>
    <string name="app_name">MOC APPS</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film\nyang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email_adrress">Email Address</string>
    <string name="email">fanirahmatulloh842@moc.id</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="selamat_datang">Welcome,\nMohammad Fani</string>
    <string name="simpan_lanjut">Simpan Dan Lanjutkan</string>
    <string name="moh_fani">Mohammad Fani</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="date_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_bayar">Total Harus Dibayar</string>
    <string name="e_wallet">E-wallet</string>
    <string name="balance">Tota Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <string name="daftar_baru">Daftar Akun Baru</string>
    <string name="daftar">Daftar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happy_watch">Happy Watching !!!</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="top_up">Top Up Saldo</string>
    <string name="custom_amount">Custom Amount</string>
</resources>
